# autodidact

./: .gitignore  README.md  docker-compose.yaml  init.sql  poetry_commands.sh  pyproject.toml  requirements.txt
downloads/: bibtex.bib
notebooks/: index_example.py.ipynb  load_csv_db.ipynb  nbtest.ipynb  test_layoutparser.py.ipynb
pg_data/: .~lock.results.csv#  result.csv  results.csv
scripts/: README.md  fep_pypaperbot_example.sh  parse_pdfs.py
search_index/: orm.py  sentence_encoder.py
testdocker/: requirements.txt
tests/: test_autodidact.py
