[tool.poetry]
name = "autodidact"
version = "0.1.0"
description = "A project for autodidacts to improve their academic information diet!"
authors = ["Stefan Lavelle"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
layoutparser = {extras = ["ocr", "layoutmodels"], version = "^0.3.4"}

[tool.poe.tasks]
## PyTorch with CUDA 11.3. If PyTorch is imported first, importing Tensorflow will detect CUDA + cuDNN bundled with PyTorch
## Run with the command "poe force-cuda11"
## See https://github.com/python-poetry/poetry/issues/2543
force-cuda11 = "pip3 install torch==1.11.0+cu113 torchvision torchaudio --extra-index-url https://download.pytorch.org/whl/cu113"
# Detectron 2 model for document AI.
detectron-2 = "pip3 install 'git+https://github.com/facebookresearch/detectron2.git@v0.5'"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
poethepoet = "^0.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"