[tool.poetry]
name = "autodidact"
version = "0.1.0"
description = "A project for autodidacts to improve their academic information diet!"
authors = ["Stefan Lavelle"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
PyPaperBot = "^1.2.2"
jupyter = "^1.0.0"
elasticsearch = "^8.2.3"
SQLAlchemy = "^1.4.39"
postgres = "^4.0"
black = {extras = ["jupyter"], version = "^22.3.0"}
spacy = "^3.3.1"
en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.3.0/en_core_web_sm-3.3.0.tar.gz"}
loguru = "^0.6.0"
eland = "^8.2.0"
cloudpathlib = "^0.9.0"
sentence-transformers = "^2.2.2"

[tool.poe.tasks]
## PyTorch with CUDA 11.3. If PyTorch is imported first, importing Tensorflow will detect CUDA + cuDNN bundled with PyTorch
## Run with the command "poe force-cuda11"
## See https://github.com/python-poetry/poetry/issues/2543
force-cuda11 = "pip3 install torch torchvision torchaudio --extra-index-url https://download.pytorch.org/whl/cu113"
# Detectron 2 model for document AI.
layout-parser-base = "pip3 install layoutparser"
layout-parser-models = "pip3 install 'layoutparser[layoutmodels]'"
layout-parser-ocr = "pip3 install 'layoutparser[ocr]'"
detectron-2 = "pip3 install 'git+https://github.com/facebookresearch/detectron2.git@v0.5'"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
poethepoet = "^0.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"